--- a/media.HTML
+++ b/media.HTML
@@ -88,19 +88,19 @@
 
 
     <div class="youtubeContainer">
-        <div class="vidContainer">
+        <div class="yvid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/EkIZwXbSh-Y"
                 title="Celebrating Mardi Gras in New Orleans | National Geographic" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-        <div class="vidContainer">
+        <div class="yvid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cT5vnPybf3Y"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-        <div class="vidContainer">
+        <div class="yvid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/x5VJe_XIuhM"
                 title="What Is Mardi Gras? The REAL History & Traditions Explained." frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
