--- a/html/media.HTML
+++ b/html/media.HTML
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&family=Roboto:ital@1&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="../css/media.css">
     <title>Mardi Gras Media
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home </a>
+                        <a class="nav-link" href="../index.html">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
