--- a/html/contact.HTML
+++ b/html/contact.HTML
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Pattaya&family=Roboto:ital@1&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <title>Mardi Gras Contact</title>
 
 </head>
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home </a>
+                        <a class="nav-link" href="../index.html">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
