--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="html/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="html/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="FAQ.html">FAQ</a>
+                        <a class="nav-link" href="html/FAQ.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
+                        <a class="nav-link" href="html/media.html">Media</a>
                     </li>
                 </ul>
             </div>
