--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home </a>
+                        <a class="nav-link active" aria-current="page" href="index.HTML">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/contact.html">Contact</a>
+                        <a class="nav-link" href="html/contact.HTML">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/about.html">About</a>
+                        <a class="nav-link" href="html/about.HTML">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/FAQ.html">FAQ</a>
+                        <a class="nav-link" href="html/FAQ.HTML">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/media.html">Media</a>
+                        <a class="nav-link" href="html/media.HTML">Media</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
+                <img src="../images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Traditional Colors</h5>
                     <p class="carouselCap">The colors traditionally associated with Mardi Gras in New Orleans are
