--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -22,7 +22,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="images/logo.png" alt="" width="" height="80"></a>
+                <img src="../images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -36,16 +36,16 @@
                         <a class="nav-link" href="../index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="../html/contact.HTML">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="../html/about.HTML">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="FAQ.html">FAQ</a>
+                        <a class="nav-link active" aria-current="page" href="../html/FAQ.HTML">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
+                        <a class="nav-link" href="../html/media.HTML">Media</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
     <h1> <span style="color: #3b5998;">F</span><span style="color: #8cBf3F;">A</span><span
             style="color:#f2cc0f">Q</span></h1>
     <div id="imgContainer">
-        <img id="faqImg" src="images/pussyfooters.jpg" alt="">
+        <img id="faqImg" src="../images/pussyfooters.jpg" alt="">
     </div>
     <div class="containerAcco">
         <div class="accordion accordion-flush" id="accordionFlushExample">
