--- a/html/contact.HTML
+++ b/html/contact.HTML
@@ -23,7 +23,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="images/logo.png" alt="" width="" height="80"></a>
+                <img src="../images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -37,16 +37,16 @@
                         <a class="nav-link" href="../index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link active" aria-current="page" href="../html/contact.HTML">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="../html/about.HTML">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="FAQ.html">FAQ</a>
+                        <a class="nav-link" href="../html/FAQ.HTML">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
+                        <a class="nav-link" href="../html/media.HTML">Media</a>
                     </li>
                 </ul>
             </div>
