--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
+                <img src="images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Traditional Colors</h5>
                     <p class="carouselCap">The colors traditionally associated with Mardi Gras in New Orleans are
