--- a/html/about.HTML
+++ b/html/about.HTML
@@ -22,7 +22,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="../images/logo.png" alt="" width="" height="80"></a>
+                <img src="../Images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home </a>
+                        <a class="nav-link" href="../index.HTML">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../html/contact.HTML">Contact</a>
@@ -56,7 +56,7 @@
     <div class="container">
         <h1>About</h1>
         <h2>The Holiday of Mardi Gras</h2>
-        <img class="paraPic1" src="../images/edoardo-maresca-WJXNZEPSues-unsplash.jpg" alt="">
+        <img class="paraPic1" src="../Images/edoardo-maresca-WJXNZEPSues-unsplash.jpg" alt="">
         <p class="p1">The holiday of Mardi Gras is celebrated in all of Louisiana, including the city of New Orleans.
             Celebrations
             are
@@ -103,7 +103,7 @@
 
 
         <h2 class="p2H">History</h2>
-        <img class="paraPic2" src="../images/flaxofrex.png" alt="">
+        <img class="paraPic2" src="../Images/flaxofrex.png" alt="">
         <p class="p2">
 
             The origins of Mardi Gras can be traced to medieval Europe, passing through Rome and Venice in the 17th and
@@ -156,7 +156,7 @@
         </p>
 
         <h2 class="p3H">LaToya Cantrell</h2>
-        <img class="paraPic3" src="../images/latoyaC.jpg" alt="">
+        <img class="paraPic3" src="../Images/latoyaC.jpg" alt="">
         <p class="p3">LaToya Cantrell (née Wilder; born April 3, 1972) is an American politician serving as the Mayor of
             New
             Orleans,
@@ -194,7 +194,7 @@
                     href="https://www.instagram.com/mardigrasneworleans/" role="button"><i
                         class="fab fa-instagram"></i></a>
                 <a class="logo-image-footer" href="#" style="float: right;">
-                    <img src="images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
+                    <img src="Images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
             </section>
         </div>
         <div class="p-3" style="font-family: Pattaya; float: right;">
