--- a/html/media.HTML
+++ b/html/media.HTML
@@ -23,7 +23,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="../images/logo.png" alt="" width="" height="80"></a>
+                <img src="../Images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home </a>
+                        <a class="nav-link" href="../index.HTML">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../html/contact.HTML">Contact</a>
@@ -58,30 +58,30 @@
             <h2 class="text-center pageTittle">Gallery</h2>
 
             <div class="row photos align-content-center">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall1.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall1.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall2.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall2.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall3.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall3.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall4.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall4.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall5.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall5.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall6.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall6.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall7.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall7.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall8.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall8.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall9.jpeg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall9.jpeg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall10.jpeg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall10.jpeg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall11.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall11.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/gall12.JPG" data-lightbox="photos"><img
-                            class="img-fluid" src="images/gall2.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall1.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall1.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall2.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall2.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall3.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall3.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall4.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall4.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall5.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall5.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall6.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall6.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall7.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall7.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall8.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall8.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall9.jpeg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall9.jpeg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall10.jpeg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall10.jpeg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall11.jpg" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall11.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="Images/gall12.JPG" data-lightbox="photos"><img
+                            class="img-fluid" src="Images/gall2.jpg"></a></div>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
                     href="https://www.instagram.com/mardigrasneworleans/" role="button"><i
                         class="fab fa-instagram"></i></a>
                 <a class="logo-image-footer" href="#" style="float: right;">
-                    <img src="images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
+                    <img src="Images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
             </section>
         </div>
         <div class="p-3" style="font-family: Pattaya; float: right;">
