--- a/html/contact.HTML
+++ b/html/contact.HTML
@@ -23,7 +23,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="../images/logo.png" alt="" width="" height="80"></a>
+                <img src="../Images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav nav-justified">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home </a>
+                        <a class="nav-link" href="../index.HTML">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../html/contact.HTML">Contact</a>
@@ -133,7 +133,7 @@
                     href="https://www.instagram.com/mardigrasneworleans/" role="button"><i
                         class="fab fa-instagram"></i></a>
                 <a class="logo-image-footer" href="#" style="float: right;">
-                    <img src="images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
+                    <img src="Images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
             </section>
         </div>
         <div class="p-3" style="font-family: Pattaya; float: right;">
