--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         style="background: linear-gradient(#9453A6, #8cBf3F, #f2cc0f);">
         <div class="container-fluid">
             <a class="navbar-brand-center" href="#">
-                <img src="images/logo.png" alt="" width="" height="80"></a>
+                <img src="Images/logo.png" alt="" width="" height="80"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -68,7 +68,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
+                <img src="Images/thomas-park-den6EylZH9w-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Traditional Colors</h5>
                     <p class="carouselCap">The colors traditionally associated with Mardi Gras in New Orleans are
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/johanna-paula-perez-vinluan-p72_Bgx0Dbg-unsplash.jpg" class="d-block w-100 carouselImg"
+                <img src="Images/johanna-paula-perez-vinluan-p72_Bgx0Dbg-unsplash.jpg" class="d-block w-100 carouselImg"
                     alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Masks</h5>
@@ -85,21 +85,21 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/ugur-arpaci-U18V0ToioFU-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
+                <img src="Images/ugur-arpaci-U18V0ToioFU-unsplash.jpg" class="d-block w-100 carouselImg" alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Costumes</h5>
                     <p class="carouselText">Extravagant costumes to behold and display.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/MondoKayo07StChasC.jpg" class="d-block w-100 carouselImg" alt="...">
+                <img src="Images/MondoKayo07StChasC.jpg" class="d-block w-100 carouselImg" alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">Collect Beads</h5>
                     <p class="carouselText">Revelers on St. Charles Avenue, 2007</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/Mardi_Gras_Parade,_New_Orleans,_Louisiana_(LOC).jpg" class="d-block w-100 carouselImg"
+                <img src="Images/Mardi_Gras_Parade,_New_Orleans,_Louisiana_(LOC).jpg" class="d-block w-100 carouselImg"
                     alt="...">
                 <div class="carousel-caption d-md-block">
                     <h5 class="carouselHead">The Parade!</h5>
@@ -314,7 +314,7 @@
                     href="https://www.instagram.com/mardigrasneworleans/" role="button"><i
                         class="fab fa-instagram"></i></a>
                 <a class="logo-image-footer" href="#" style="float: right;">
-                    <img src="images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
+                    <img src="Images/Mardi-Gras-Logo-Transparent-PNG.png" alt="" width="150" height="150"></a>
             </section>
         </div>
         <div class="p-3" style="font-family: Pattaya; float: right;">
