--- a/html/media.HTML
+++ b/html/media.HTML
@@ -64,24 +64,24 @@
                             class="img-fluid" src="../Images/gall2.jpg"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall3.jpg" data-lightbox="photos"><img
                             class="img-fluid" src="../Images/gall3.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall4.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="../Images/gall4.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall4.JPG" data-lightbox="photos"><img
+                            class="img-fluid" src="../Images/gall4.JPG"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall5.jpg" data-lightbox="photos"><img
                             class="img-fluid" src="../Images/gall5.jpg"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall6.jpg" data-lightbox="photos"><img
                             class="img-fluid" src="../Images/gall6.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall7.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="../Images/gall7.jpg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall8.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="../Images/gall8.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall7.JPG" data-lightbox="photos"><img
+                            class="img-fluid" src="../Images/gall7.JPG"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall8.JPG" data-lightbox="photos"><img
+                            class="img-fluid" src="../Images/gall8.JPG"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall9.jpeg" data-lightbox="photos"><img
                             class="img-fluid" src="../Images/gall9.jpeg"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall10.jpeg" data-lightbox="photos"><img
                             class="img-fluid" src="../Images/gall10.jpeg"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall11.jpg" data-lightbox="photos"><img
-                            class="img-fluid" src="../Images/gall11.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall11.JPG" data-lightbox="photos"><img
+                            class="img-fluid" src="../Images/gall11.JPG"></a></div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="../Images/gall12.JPG" data-lightbox="photos"><img
-                            class="img-fluid" src="../Images/gall2.jpg"></a></div>
+                            class="img-fluid" src="../Images/gall12.JPG"></a></div>
             </div>
         </div>
     </div>
